# Web-Mill-Version-Checker

./: Cargo.toml
src/: main.rs
wm/: run_update.php  updateTarget.php
wm/admin/: updateTarget2.php
wm/development/: updateTarget3.php
wm/development/updateTarget4/: updateTarget4.php
